--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           --health-retries 5
 
     env:
+      EPEX_TWIN_API_TOKEN: test
       RAILS_ENV: test
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
