--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
       DATABASE_HOST: localhost
+      METEOBLUE_API_TOKEN: test
 
     steps:
     - uses: actions/checkout@v4
